<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@mipmap/ic_home_white_24dp"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@mipmap/ic_account_box_white_24dp"
            android:title="@string/nav_profile" />
        <item
            android:id="@+id/nav_trollbox"
            android:icon="@mipmap/ic_move_to_inbox_white_24dp"
            android:title="@string/nav_trollbox" />

        <item
            android:id="@+id/nav_taketest"
            android:icon="@mipmap/ic_library_books_white_24dp"
            android:title="@string/nav_test" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@mipmap/ic_settings_white_24dp"
            android:title="@string/nav_settings" />
    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_donate"
                android:title="@string/nav_donate"
                android:icon="@mipmap/ic_donate_white_24dp"/>
            <item
                android:id="@+id/nav_meetdev"
                android:title="@string/nav_about_us"
                android:icon="@mipmap/ic_developer_mode_white_24dp"/>
        </menu>
    </item>

</menu>